--- a/static/css/mian.css
+++ b/static/css/mian.css
@@ -31,7 +31,7 @@ html,body{
 body{
 	font-size: 1.2rem;
 	line-height: 1.5;
-	background: #f2f2f2;
+	background: #e0e0e0;
 }
 
 
@@ -192,10 +192,10 @@ body{
 /* start container */
 .lay-blog .container-wrap{margin:0px auto 0;min-height:100%;padding:120px 0 160px 0;box-sizing: border-box;}
 .lay-blog .container{width:800px;margin:0 auto;}
-.lay-blog .container h4{margin-bottom: 15px; line-height: 70px;background: #fff;font-size:16px;}
+.lay-blog .container h4{margin-bottom: 15px; line-height: 70px;background: #fff;font-size:16px; border-radius: 5px}
 .lay-blog .container h4 p{padding-left:40px;color:#666666;}
 .lay-blog .container h4 p i{font-size:26px;padding-right:10px;position:relative;top:3px;}
-.lay-blog .container .item{margin-bottom: 15px; background: #fff; padding-top: 20px;}
+.lay-blog .container .item{margin-bottom: 15px; background: #fff; padding-top: 20px; border-radius: 5px}
 
 .lay-blog .container .item-login{background: transparent; width:350px;margin:0 auto; flex-wrap: wrap;}
 .lay-blog .container .item-msg{margin-bottom: 15px; background: transparent; padding-top: 20px;}
