--- a/views/login.html
+++ b/views/login.html
@@ -34,7 +34,7 @@
 
 
                     <form class="form-signin layui-form text-center">
-                      <img class="mb-4" src="/static/images/icon.png" alt="" width="72" height="72">
+                      <img class="mb-4" src="/static/images/admin.png" alt="" width="72" height="72">
                       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                      
                       <input type="email" name="email" class="form-control" placeholder="邮箱" required autofocus lay-verify="required">
