--- a/static/css/mian.css
+++ b/static/css/mian.css
@@ -50,6 +50,7 @@ body{
 	height: 100px;
 	margin-bottom: -100px;
 	line-height:100px;
+	/*background: #1E9FFF;*/
 	background: #2568A3;
 }
 .lay-blog .logo-img{
@@ -241,7 +242,7 @@ body{
 	text-align: right;
 }
 .lay-blog .container-message .item-btn{margin-bottom: 50px;}
-.lay-blog .container-message .info-item{font-size:14px;margin-bottom: 40px;}
+.lay-blog .container-message .info-item{font-size:14px;margin-top: 40px;}
 .lay-blog .container-message .info-img{cursor: pointer;float: left;padding-right:0;}
 .lay-blog .container-message .info-text{padding-left:120px;}
 
