--- a/static/lib/wangEditor.css
+++ b/static/lib/wangEditor.css
@@ -373,6 +373,7 @@
   line-height: 1.4;
   font-size: 100%;
   background-color: #f1f1f1;
+  min-height: 1000px;
 }
 .w-e-text code {
   display: inline-block;
