--- a/views/comm/header.html
+++ b/views/comm/header.html
@@ -2,7 +2,7 @@
     <div class="header-wrap ">
         <h1 class="logo pull-left">
             <a href="/">
-                <img src="/static/images/logo.png" alt="" class="logo-img">
+                <img src="/static/images/logo2.png" alt="" class="logo-img">
             </a>
         </h1>
         <form class="layui-form blog-seach pull-left" action="/">
