--- a/views/error/500.html
+++ b/views/error/500.html
@@ -14,7 +14,7 @@
 	<div class="container-wrap">
 		<div class="container">
 				<div class="contar-wrap">
-					<div style="padding: 150px 0 50px; text-align: center; font-size: 30px; color: #ccc; font-weight: 300;">
+					<div style="padding: 150px 0 50px; text-align: center; font-size: 30px; color: #aaa; font-weight: 300;">
 						{{.content}}
 					</div>
 				</div>
