--- a/views/note.html
+++ b/views/note.html
@@ -5,6 +5,9 @@
     <link rel="shortcut icon" href="/static/images/icon.png" >
     <title>Meetoo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  	<link href="/static/emoji_pick/lib/css/emoji.css" rel="stylesheet">
 {{template "comm/link.html"}}
 </head>
 <body class="lay-blog">
@@ -14,7 +17,7 @@
 		<div class="container container-message container-details">
 			<div class="contar-wrap">
 				<div class="item">
-					<div class="item-box  layer-photos-demo1 layer-photos-demo">
+					<div class="item-box">
 						{{template "comm/note_content.html" .note}}
 						<div class="count layui-clear">
 							<span class="pull-left">阅读 <em class="value"> {{add .note.Visits 1}} </em></span>
@@ -33,11 +36,15 @@
 
 					<br>
 					<form class="layui-form" action="">
-			                <div class="layui-form-item layui-form-text">
-			                    <textarea class="xiaohe layui-textarea" id="LAY-msg-content" placeholder="写点什么啊" style="resize:none;"></textarea>
+			                <div class="layui-form-item lead emoji-picker-container">
+			                    <textarea class="xiaohe layui-textarea" id="LAY-msg-content" placeholder="写点什么啊" style="resize:none;" data-emojiable="true"></textarea>
 			                </div>
+
+							<!-- <div class="layui-form-item">
+			                	<button class="layui-btn layui-btn-normal"  id="item-btn-cmt">提交</button>
+			            	</div> -->
 		            </form>
-		            <div class="item-btn pull-right">
+		            <div class="item-btn pull-left">
 		                <button class="layui-btn layui-btn-normal" id="item-btn-cmt">提交</button>
 		            </div>
 		            {{end}}
@@ -179,5 +186,25 @@
 	</script>
 	{{end}}
 
+	<script src="/static/emoji_pick/lib/js/jquery-1.11.3.min.js"></script>
+			<script src="/static/emoji_pick/lib/js/config.js"></script>
+			<script src="/static/emoji_pick/lib/js/util.js"></script>
+			<script src="/static/emoji_pick/lib/js/jquery.emojiarea.js"></script>
+			<script src="/static/emoji_pick/lib/js/emoji-picker.js"></script>
+
+			<script>
+		      $(function() {
+		        // Initializes and creates emoji set from sprite sheet
+		        window.emojiPicker = new EmojiPicker({
+		          emojiable_selector: '[data-emojiable=true]',
+		          assetsPath: '/static/emoji_pick/lib/img/',
+		          popupButtonClasses: 'fa fa-smile-o'
+		        });
+		        // Finds all elements with `emojiable_selector` and converts them to rich emoji input fields
+		        // You may want to delay this step if you have dynamically created input fields that appear later in the loading process
+		        // It can be called as many times as necessary; previously converted input fields will not be converted again
+		        window.emojiPicker.discover();
+		      });
+		    </script>
 </body>
 </html>
