--- a/views/reg.html
+++ b/views/reg.html
@@ -26,7 +26,7 @@
 
                     <form class="form-signin layui-form text-center">
 
-                        <img class="mb-4" src="/static/images/icon.png" alt="" width="72" height="72">
+                        <img class="mb-4" src="/static/images/admin.png" alt="" width="72" height="72">
                         <h1 class="h3 mb-3 font-weight-normal">Please register</h1>
 
                             <div class="layui-form-item">
